--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,1 +1,8 @@
+.box-shadow {
+  box-shadow: 0px 0px 2px 0px rgb(86, 103, 126);
+}
 
+.box-outline {
+  box-shadow: 0px 0px 0px 0px rgb(86, 103, 126);
+  border: 1px solid #b3c3da;
+}
