style(login): change login design

--- a/src/components/Announcements/Announcements.css
+++ b/src/components/Announcements/Announcements.css
@@ -1,6 +1,11 @@
 .announce-container {
   height: 85%;
   background-color: #f9fafd;
+  overflow-y: scroll;
+}
+
+.announce-container::-webkit-scrollbar {
+  display: none;
 }
 
 #announce-msg-users {
