--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
+  background-color: #02044a;
 }
 
 @tailwind base;
